# never-jscore

./: .gitignore  Cargo.toml  NODEJS_V25_API_COMPARISON.md  README.md  github_cargo.toml  linux_cargo.toml  local_cargo.toml  pyproject.toml
.cargo/: config.toml
.github/workflows/: build-wheels.yml
docs/: CANVAS_API_REFERENCE.md  UVICORN_WORKERS_EXPLAINED.md
examples/: test.py  use_polyfill.py
py_mod/never_jscore/: __init__.py  never_jscore.pyi
src/: context.rs
src/dddd_js/: js_polyfill.js
src/ext/: mod.rs
src/ext/canvas/: canvas.js  canvas_native.js  color.rs  image.rs  mod.rs  ops.rs  registry.rs
src/node_compat/: npm_checker.rs
src/ops/: storage_ops.rs
tests/: canvas_complete_example.py
