[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "never-jscore"
version = "2.5.2"
description = "High-performance Python JavaScript execution engine based on Deno Core (V8) with full Promise/async support and official Deno Web API integration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["javascript", "execjs", "deno", "v8", "js", "python", "rust", "promise", "async", "py_mini_racer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/neverl805/never-jscore"
Repository = "https://github.com/neverl805/never-jscore"
Documentation = "https://github.com/neverl805/never-jscore#readme"
"Bug Tracker" = "https://github.com/neverl805/never-jscore/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "py_mod"